AUTOATTN-543: Fix gap in the builder lane in firefox

--- a/app/modules/huron/features/autoAttendant/builder/_aa-builder.scss
+++ b/app/modules/huron/features/autoAttendant/builder/_aa-builder.scss
@@ -291,7 +291,6 @@ $aa-builder-text-color: $gray-dark-1;
 
   @extend .aa-transition;
 
-  display: inline-block;
   @include vr-spacing(m, 0);
 
   @include vr-spacing(pl, .5);
